[project]
name = "fbsmslib"
version = "0.1.0"
description = "A small library for AVM Fritz!Box authentication and SMS sending"
authors = [
    {name = "Netz.ac e.V.",email = "verein@netz.ac"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pyotp (>=2.9.0,<3.0.0)",
    "pyrate-limiter (>=3.9.0,<4.0.0)"
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
